# megara-fmpt

./: .codedocs  .gitignore  .hgignore  .travis.yml  AUTHORS  Doxyfile  Doxyfile.in  FMPA_SAA_main.cpp  Makefile.am  README  README.md  TEC_MEG_171.doc  autoclear.sh  autogen.sh  calculus_of_SPM.txt  configure.ac  fmpt_saa.pro  regen.sh
data/: Makefile.am
data/DataForTests/: PairPPDP_DP-Dend_from_megara-cb0.txt  PairPPDP_DP-Dmin_from_megara-cb0.txt  PairPPDP_DP-FMPT_from_megara-cb0.txt  PairPPDP_DP-MCS_from_megara-cb0.txt  PairPPDP_DispCorners1_from_megara-cb0.txt  PairPPDP_DispCorners2_from_megara-cb0.txt  PairPPDP_MCS_from_megara-cb0.txt  PairPPDP_OPL-S0_from_megara-cb0.txt  PairPPDP_OPL-S1_from_megara-cb0.txt  PairPPDP_OPL_from_megara-cb0.txt  PairPPDP_PP-Dend_from_megara-cb0.txt  PairPPDP_PP-Dmin_from_megara-cb0.txt  PairPPDP_PP-FMPT_from_megara-cb0.txt  PairPPDP_PP-MCS_from_megara-cb0.txt  PairPPDP_other-outputs_from_megara-cb0.txt  PairPPDP_outputs_from_megara-cb0.json  PairPPDP_outputs_from_megara-cb0.meg  ParkProg_Dmin_from_megara-cb0.txt  ParkProg_FPL_from_megara-cb0.txt  ParkProg_other-outputs_from_megara-cb0.txt  ParkProg_outputs_from_megara-cb0.json  ParkProg_outputs_from_megara-cb0.meg
data/Manuals/: FMPT_Architecture.doc  TEC_MEG_171.doc  calculus_of_SPM.txt  main_example_generatePairPPDP_online.cpp  main_example_generateParkingProgram_online.cpp
data/Measures/: Medidas1.txt  Medidas2.txt
data/Models/: positionersCenters(100RPs).txt  positionersCenters.txt
data/Models/MEGARA_FiberConnectionsModel_Instance/: Connections.txt
data/Models/MEGARA_FiberMOSModel_Instance/: ExclusionAreaOriginsTable.txt  Instance.txt  InstanceMap.txt  RoboticPositionerOriginsTable.txt  RoboticPositionerOriginsTable_default.txt
data/Models/MEGARA_FiberMOSModel_Instance/ExclusionArea1/: Contour_ approximated.txt  Contour_.txt  Contour_precise.txt  Instance.txt  Instance.txt~
data/Models/MEGARA_FiberMOSModel_Instance/ExclusionArea2/: Contour_.txt  Instance.txt
data/Models/MEGARA_FiberMOSModel_Instance/RoboticPositioner1/: F2.txt  Instance.txt  Instance.txt~
data/Models/MEGARA_FiberMOSModel_Instance/RoboticPositioner10/: F2.txt  Instance.txt
data/Models/MEGARA_FiberMOSModel_Instance/RoboticPositioner11/: Instance.txt
data/Models/MEGARA_RP_Instance/: Contour_.txt  Contour____.txt  F1.txt  F2.txt  Instance.txt
data/PPLists/: 20130912093320.txt  20140319102745.txt
data/Samples/: DP-from-megara-cb_28sources.txt  DP-from-megara-cb_90sources.txt  PP-from-megara-cb_28sources.txt  PP-from-megara-cb_90sources.txt  main_example_generatePairPPDP_online.cpp  main_example_generateParkingProgram_online.cpp  megara-cb0-2.txt  megara-cb0.txt  megara-cb0_RP1.txt  megara-cb1.txt  megara-cb2.txt  megara-cb3.txt  megara-cb4.txt  megara-cb5.txt  megara-cb6.txt  megara-cb7.txt  megara-cb_28sources.txt  megara-cb_90sources.txt  trivial_example.txt
data/Samples/example_generatePairPPDP_offline/: DP-Dmin-from-megara-cb0.txt  Disp_Corners1-from-megara-cb0.txt  Disp_Corners2-from-megara-cb0.txt  OPL_S0-from-megara-cb0.txt  OPL_S1-from-megara-cb0.txt  PP-Dmin-from-megara-cb0.txt  PP-FMPT-from-megara-cb0.txt  PP-from-megara-cb0.txt  other_outputs-from-megara-cb0.txt  outputs-from-megara-cb0.txt
data/Samples/example_generatePairPPDP_online/: AL-from-example-0.txt  DP-FMPT-from-example-0.txt  DP-from-example-0.txt  IPL-from-example-0.txt  OPL-from-example-0.txt  other-outputs-from-example-0.txt
data/Samples/example_generateParkProg_offline/: other_outputs-from-megara-cb0.txt
data/Samples/example_generateParkProg_online/: AL-from-example-0.txt  ParkProg-FMPT-from-example-0.txt  ParkProg-from-example-0.txt  SPL-from-example-0.txt  other-outputs-from-example-0.txt
data/Samples/example_generateParkingProgram_offline/: ParkingProgram-Dmin-from-megara-cb0.txt
data/Samples/example_generateParkingProgram_online/: FPL-from-example-0.txt
data/Samples/test-1/: DP-Dmin-from-FMOSA-for-test-1.txt  Disp_Corners1-from-FMOSA-for-test-1.txt  Disp_Corners2-from-FMOSA-for-test-1.txt  FMOSA-for-test-1.txt  OPL_S0-from-FMOSA-for-test-1.txt  OPL_S1-from-FMOSA-for-test-1.txt  PP-Dmin-from-FMOSA-for-test-1.txt  PP-FMPT-from-FMOSA-for-test-1.txt  PP-from-FMOSA-for-test-1.txt  other_outputs-from-FMOSA-for-test-1.txt  outputs-from-FMOSA-for-test-1.txt
src/: Actuator.cpp  Actuator.h  Allocation.cpp  Allocation.h  AllocationList.cpp  AllocationList.h  Arm.cpp  Arm.h  Barrier.cpp  Barrier.h  Cilinder.cpp  Cilinder.h  ComposedMotionFunction.cpp  ComposedMotionFunction.h  Constants.cpp  Constants.h  ContourFigureList.cpp  ContourFigureList.h  Exceptions.cpp  Exceptions.h  ExclusionArea.cpp  ExclusionArea.h  ExclusionAreaList.cpp  ExclusionAreaList.h  FMOSA.cpp  FMOSA.h  FMOSATable.cpp  FMOSATable.h  FMPA_SAA_main.cpp  FiberConnectionModel.cpp  FiberConnectionModel.h  FiberMOSModel.cpp  FiberMOSModel.h  FiberMOSModel1.cpp  FiberMOSModel1.h  FiberMOSModel2.cpp  FiberMOSModel2.h  FiberMOSModelConstants.h  Figure.cpp  Figure.h  (+100 more)
tests/: Makefile  Makefile.am  Makefile.in  compile.sh  cppunit_assert_emulator.cpp  cppunit_assert_emulator.h  execute.sh  gtest.cpp  gtest.h  main_testOutputsPairPPDP.cpp  no_tests.sh  test1.cpp  testActuator.cpp  testActuator.h  testAllocation.cpp  testAllocation.h  testAllocationList.cpp  testAllocationList.h  testArm.cpp  testArm.h  testBarrier.cpp  testBarrier.h  testCilinder.cpp  testCilinder.h  testComposedMotionFunction.cpp  testComposedMotionFunction.h  testContourFigureList.cpp  testContourFigureList.h  testExceptions.cpp  testExceptions.h  testExclusionArea.cpp  testExclusionArea.h  testExclusionAreaList.cpp  testExclusionAreaList.h  testFMOSA.cpp  testFMOSA.h  testFMOSATable.cpp  testFMOSATable.h  testFiberConnectionModel.cpp  testFiberConnectionModel.h  (+76 more)
tests/sample/: gtest.h  test1.cpp
ui/: GenerateFrames.cpp  GenerateFrames.h  Makefile.am  PloterShapes.cpp  PloterShapes.h  RoboticPositionerFormulary.cpp  RoboticPositionerFormulary.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcanvas.cpp  tcanvas.h  tshowmessage.ui
(+189 files in other folders)
